cabal-version: 2.2
name:
  vflow-types
version:
  0.1
synopsis:
  types for https://github.com/VerizonDigital/vflow
description:
  types for https://github.com/VerizonDigital/vflow
homepage:
  https://github.com/chessai/vflow-types
bug-reports:
  https://github.com/chessai/vflow-types/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility,Data,Parsing,Text
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    VFlow.Types.IpFix
    VFlow.Types.SFlow
    VFlow.Types.NetFlow5
    VFlow.Types.NetFlow9
  build-depends:
    , aeson >= 1 && < 1.5
    , base >= 4.10.1.0 && < 4.13
    , ip >= 1.5 && < 1.6
    , json-alt >= 1 && < 1.1
    , json-autotype >= 3 && < 4
    , scientific >= 0.3 && < 0.4
    , text >= 1.2 && < 1.3
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: UnitTests.hs
  build-depends:
    , base
    , vflow-types
    , bytestring
    , text
    , aeson
    , neat-interpolation

test-suite laws
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Laws.hs
  build-depends:
    , base
    , vflow-types
    , QuickCheck
    , quickcheck-classes
    , json-alt
    , ip

source-repository head
  type:
    git
  location:
    https://github.com/chessai/vflow-types.git
